modules/nacl/main.tf
resource "aws_network_acl" "this" {
  vpc_id = var.vpc_id

  ingress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags = {
    Name = "${var.nacl_name}-nacl"
  }
}

resource "aws_network_acl_association" "assoc" {
  count          = length(var.subnet_ids)
  network_acl_id = aws_network_acl.this.id
  subnet_id      = var.subnet_ids[count.index]
}
